--- a/ChessSolution/ChessProject/ChessProject.vcxproj
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj
@@ -153,6 +153,9 @@
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="chessGraphics.exe" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
