--- a/ChessSolution/ChessProject/ChessProject.vcxproj.filters
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj.filters
@@ -87,4 +87,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="chessGraphics.exe" />
+  </ItemGroup>
 </Project>
