I continued to build manager. We have 239 errors and I have no idea why because they don't make sense.

--- a/ChessSolution/ChessProject/ChessProject.vcxproj
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="King.cpp" />
     <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Piece.cpp" />
