--- a/ChessSolution/ChessProject/ChessProject.vcxproj.filters
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="Manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
