--- a/ChessSolution/ChessProject/ChessProject.vcxproj
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Exception.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
     <ClInclude Include="Manager.h" />
