--- a/ChessSolution/ChessProject/ChessProject.vcxproj.filters
+++ b/ChessSolution/ChessProject/ChessProject.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
